[package]
name = "repl"
version = "0.1.0"
edition = "2018"

# This is necessary to specify that this crate is a binary crate.
[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
eval = { path = "../eval" }
whoami = "1.4.1"
colored = "2.0.4"
# parser = { path = "../parser" }
